--- a/public/css/foundation.css
+++ b/public/css/foundation.css
@@ -56,7 +56,7 @@ body {
 
 body {
   background: #fff;
-  color: #222;
+  color: #555555;
   cursor: auto;
   font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   font-style: normal;
@@ -5320,7 +5320,7 @@ p {
 
 /* Default header styles */
 h1, h2, h3, h4, h5, h6 {
-  color: #222222;
+  color: #555555;
   font-family: "brandon-grotesque";
   font-style: normal;
   font-weight: normal;
@@ -5329,7 +5329,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: 0.2rem;
   text-rendering: optimizeLegibility; }
   h1 small, h2 small, h3 small, h4 small, h5 small, h6 small {
-    color: #6f6f6f;
+    color: #919191;
     font-size: 60%;
     line-height: 0; }
 
@@ -5353,7 +5353,7 @@ h6 {
 
 .subheader {
   line-height: 1.4;
-  color: #6f6f6f;
+  color: #919191;
   font-weight: normal;
   margin-top: 0.2rem;
   margin-bottom: 0.5rem; }
@@ -5449,7 +5449,7 @@ abbr,
 acronym {
   text-transform: uppercase;
   font-size: 90%;
-  color: #222;
+  color: #555555;
   cursor: help; }
 
 abbr {
@@ -5465,17 +5465,17 @@ blockquote {
   blockquote cite {
     display: block;
     font-size: 0.8125rem;
-    color: #555555; }
+    color: #7c7c7c; }
     blockquote cite:before {
       content: "\2014 \0020"; }
     blockquote cite a,
     blockquote cite a:visited {
-      color: #555555; }
+      color: #7c7c7c; }
 
 blockquote,
 blockquote p {
   line-height: 1.6;
-  color: #6f6f6f; }
+  color: #919191; }
 
 /* Microformats */
 .vcard {
