--- a/public/css/partials/global.css
+++ b/public/css/partials/global.css
@@ -38,4 +38,7 @@ a.mega-button, button.mega-button {
   display: block;
   width: 100%; }
 
+p, h1, h2, h3, h4, ul, li {
+  color: #555; }
+
 /*# sourceMappingURL=global.css.map */
