--- a/public/views/main.html
+++ b/public/views/main.html
@@ -9,8 +9,8 @@
         </div>
         <div>
           <a class="mega-button" ng-href="/#/search_skills">Solve My Problem!</a>
-          <a class="mega-button" ng-href="/#/add_skills">Add my skills!</a>
-          <a class="mega-button" ng-href="/#/inbox">Go to my messages!</a>
+          <a class="mega-button" ng-href="/#/add_skills">Add skills</a>
+          <a class="mega-button" ng-href="/#/inbox">My messages</a>
         </div>
       </div>
     </div>
@@ -23,7 +23,7 @@
       </div>
       <div class="small-12 medium-4 medium-offset-1 columns">
         <h3>Dripping Tap? Bicycle Puncture? Broken Window?</h3>
-        <p>FixItSos helps you find people near you who are happy to help fix things.</p>
+        <p>CommunityFixer helps you find people near you who are happy to help fix things.</p>
       </div>
         <div class="small-12 medium-4 medium-offset-2 end columns">
           <h3>Got some awesome DIY skills?</h3>
