--- a/public/views/user_registrations/new.html
+++ b/public/views/user_registrations/new.html
@@ -89,6 +89,7 @@
           events="UserCtrl.locationPicker.searchbox.events"
           position="BOTTOM_RIGHT">
         </ui-gmap-search-box>
+        <ui-gmap-marker coords='UserCtrl.locationPicker.marker.coords' idKey='1' options='UserCtrl.locationPicker.marker.options'></ui-gmap-marker>
         </ui-gmap-google-map>
 
         <button type="submit" class="mega-button submit-button">Register</button>
