Sending messages and replies redirect to inbox

--- a/public/views/sending_messages/reply_messages.html
+++ b/public/views/sending_messages/reply_messages.html
@@ -1,4 +1,4 @@
 <div ng-controller="replyingMessagesController as replyCtrl" >
   <label>Your Reply:</label><input  type="text" ng-model = "replyCtrl.replyBody" placeholder="Enter message">
-  <button ng-click="replyCtrl.sendReply()"> Send your message </button>
+  <a ng-href="/#/inbox"> <button ng-click="replyCtrl.sendReply()"> Send your message </button> </a>
 </div>
