--- a/public/views/sending_messages/send_messages.html
+++ b/public/views/sending_messages/send_messages.html
@@ -1,5 +1,5 @@
 <div ng-controller="sendingMessagesController as SendCtrl" >
   <label>Subject:</label><input type="text" ng-model="SendCtrl.messageSubject" placeholder="Enter subject">
   <label>Your Message:</label><input  type="text" ng-model="SendCtrl.messageBody" placeholder="Enter message">
-  <button ng-click="SendCtrl.sendMessage()"> Send your message </button>
+  <a ng-href="/#/inbox"><button ng-click="SendCtrl.sendMessage()"> Send your message </button> </a>
 </div>
