--- a/public/scss/partials/homepage.scss
+++ b/public/scss/partials/homepage.scss
@@ -60,6 +60,15 @@ section#intro.section {
       h2 {
         color: #fff;
       }
+      .image-container {
+        display: inline-block;
+        height: 120px;
+        width: 120px;
+        border-radius: 100%;
+        border: solid 2px #fff;
+        overflow: hidden;
+        margin-bottom: 1em;
+      }
     }
     a {
       margin: 0 1em;
