--- a/public/views/main.html
+++ b/public/views/main.html
@@ -5,6 +5,9 @@
     <div class="row">
       <div class="small-12 medium-10 medium-centered columns">
         <div id='welcomeUser'>
+          <div class="image-container">
+            <img src="{{user.image}}" />
+          </div>
           <h2>Hello {{user.name}}!</h2>
         </div>
         <div>
