--- a/public/views/user_skills_list/search_results.html
+++ b/public/views/user_skills_list/search_results.html
@@ -2,24 +2,41 @@
 <section id="search-results" class="section search">
 
   <div class="row">
-    <div class="small-12 medium-10 medium-centered columns">
+
       <div ng-controller="listController as ListCtrl" ng-init="ListCtrl.getUsersSkills()">
 
-        <h2>Good news! There are {{ ListCtrl.users.length }} people near you who might be able to help:</h2>
+        <div class="small-12 medium-10 medium-centered columns">
 
-        <div class="users-list" ng-repeat="user in ListCtrl.users | orderBy : -'distance'">
+          <h2>Good news! There are {{ ListCtrl.users.length }} people near you who might be able to help:</h2>
 
-          <div class="user-name">
-            <h3>{{user.name}}</h3>
-          </div>
-          <div class="user-location">
-            <h4>{{user.location}}</h4>
-          </div>
-          <div class="user-distance">
-            <h4>{{user.distance}} miles from you</h4>
-          </div>
+        </div>
 
-          <a class="mega-button" ng-href="/#/send-message" ng-click = "ListCtrl.saveUserId(user.id)">Send {{user.name}} a message!</a>
+        <div class="small-12 medium-10 medium-centered columns">
+
+          <div class="row">
+
+            <div class="users-list" ng-repeat="user in ListCtrl.users | orderBy : ListCtrl.orderByDistance">
+
+              <div class="user small-12 medium-6 columns">
+
+                <div class="image-container">
+                  <img src="{{user.image}}"/>
+                </div>
+                <div class="user-name">
+                  <h3>{{user.name}}</h3>
+                </div>
+                <div class="user-location">
+                  <h4>{{user.location}}</h4>
+                </div>
+                <div class="user-distance">
+                  <h4>{{user.distance}} miles from you</h4>
+                </div>
+
+                <a class="mega-button" ng-href="/#/send-message" ng-click = "ListCtrl.saveUserId(user.id)">Send {{user.name}} a message!</a>
+
+            </div>
+
+          </div>
 
         </div>
 
@@ -29,6 +46,5 @@
     <!-- /.small-12 medium-10 medium-centered columns -->
   </div>
   <!-- /.row -->
-
 
 </section>
