--- a/public/scss/partials/homepage.scss
+++ b/public/scss/partials/homepage.scss
@@ -68,6 +68,8 @@ section#intro.section {
         border: solid 2px #fff;
         overflow: hidden;
         margin-bottom: 1em;
+        background: url('../images/profiledefault.png') no-repeat center center;
+        background-size: cover;
       }
     }
     a {
