--- a/public/views/user_skills_list/search_results.html
+++ b/public/views/user_skills_list/search_results.html
@@ -7,7 +7,7 @@
 
         <div class="small-12 medium-10 medium-centered columns">
 
-          <h2>Good news! There are {{ ListCtrl.users.length }} people near you who might be able to help:</h2>
+          <h2>Good news! There are {{ ListCtrl.users.length }} people near you who might be able to help with ListCtrl.:</h2>
 
         </div>
 
