First sender ID correctly assigned, request job button shown to correct user

--- a/public/views/add_user_skills.html
+++ b/public/views/add_user_skills.html
@@ -8,7 +8,7 @@
       <label ng-repeat ='skill in addCtrl.skills'>
         <input type = "checkbox" ng-click = "addCtrl.addSkills(skill)" ng-model = "skill.added" > select {{skill.name}} </input>
       </label>
-      <button ng-click = "addCtrl.submit()"> Submit! <submit>
+      <a ng-href="/#/"><button ng-click = "addCtrl.submit()"> Submit! <submit></a>
   </div>
 
   <!-- <div class="skillsSearchBar" ng-hide="loaded">
