Job object created on 'request job' click with correct recipient and fixer ID

--- a/public/views/mailbox/inbox.html
+++ b/public/views/mailbox/inbox.html
@@ -7,7 +7,7 @@
    <div>
      <section class='job-request' ng-show ="mailCtrl.isCurrentUserRequesting" >
        <button ng-click = "mailCtrl.createJob()"> Request Job </button>
-       <input type="text"> Time: </input>
+       <input type="text"> Name: </input>
      </section>
 
 
