--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -6,4 +6,5 @@
 @import 'partials/search';
 @import 'partials/add_skills';
 @import 'partials/messaging';
+@import 'partials/profile';
 @import 'partials/footer';
