--- a/public/scss/partials/messaging.scss
+++ b/public/scss/partials/messaging.scss
@@ -35,10 +35,16 @@ section#inbox.section {
       // background: none;
     }
   }
+
+  .mail-button.mega-button {
+    font-size: 0.75em;
+  }
 }
 
 section#send-message {
   h2 {
     margin: 0 0 1.5em 0;
   }
+
+
 }
