--- a/public/scss/partials/search.scss
+++ b/public/scss/partials/search.scss
@@ -13,7 +13,7 @@ section.search {
   .user {
     margin-bottom: 4em;
   }
-  a.mega-button {
+  a.humble-button {
   margin-top: 1em;
   display: inline-block;
   }
