--- a/public/views/user_skills_list/search_results.html
+++ b/public/views/user_skills_list/search_results.html
@@ -32,8 +32,8 @@
                   <h4>{{user.distance}} miles from you</h4>
                 </div>
 
-                <a class="mega-button" ng-href="/#/send-message" ng-click = "ListCtrl.saveUserId(user.id)">Send {{user.name}} a message!</a>
-                <a class="mega-button" ng-href="/#/user_profile" ng-click = "ListCtrl.saveUser(user)">View {{user.name}}'s Profile</a>
+                <a class="humble-button" ng-href="/#/send-message" ng-click = "ListCtrl.saveUserId(user.id)">Send {{user.name}} a message</a>
+                <a class="humble-button" ng-href="/#/user_profile" ng-click = "ListCtrl.saveUser(user)">View {{user.name}}'s Profile</a>
 
             </div>
 
