--- a/public/css/main.css
+++ b/public/css/main.css
@@ -30,6 +30,24 @@ a.mega-button, button.mega-button {
     background: #555;
     color: #fff; }
 
+a.humble-button, button.humble-button {
+  border: 2px solid #fff;
+  border-radius: 5px;
+  padding: 1em;
+  text-transform: uppercase;
+  font-family: "brandon-grotesque";
+  background: #FFE181;
+  position: relative;
+  display: inline-block;
+  font-weight: 400;
+  transition: all 300ms ease;
+  color: #555;
+  font-size: 0.75em; }
+  a.humble-button:hover, a.humble-button:focus, button.humble-button:hover, button.humble-button:focus {
+    outline: none;
+    background: #555;
+    color: #fff; }
+
 .submit-button {
   margin-top: 2em; }
 
@@ -169,7 +187,7 @@ section.search .users-list {
   text-align: center; }
   section.search .users-list .user {
     margin-bottom: 4em; }
-  section.search .users-list a.mega-button {
+  section.search .users-list a.humble-button {
     margin-top: 1em;
     display: inline-block; }
   section.search .users-list .image-container {
@@ -241,9 +259,31 @@ section#inbox.section .message-content {
     height: 2px;
     content: "";
     background: #555; }
+section#inbox.section .mail-button.mega-button {
+  font-size: 0.75em; }
 
 section#send-message h2 {
   margin: 0 0 1.5em 0; }
+
+section#user-profile.section .image-container {
+  display: inline-block;
+  height: 150px;
+  width: 150px;
+  border-radius: 100%;
+  overflow: hidden;
+  margin-bottom: 1.5em; }
+  section#user-profile.section .image-container img {
+    height: 100%;
+    width: auto; }
+section#user-profile.section .skill-list {
+  display: inline-block; }
+  section#user-profile.section .skill-list p {
+    margin-right: 5px; }
+    section#user-profile.section .skill-list p:after {
+      content: " | ";
+      color: #FFE181; }
+  section#user-profile.section .skill-list:last-child p:after {
+    content: ""; }
 
 footer#colophon {
   padding: 3em 0;
