--- a/public/css/partials/search.css
+++ b/public/css/partials/search.css
@@ -7,7 +7,7 @@ section.search .users-list {
   text-align: center; }
   section.search .users-list .user {
     margin-bottom: 4em; }
-  section.search .users-list a.mega-button {
+  section.search .users-list a.humble-button {
     margin-top: 1em;
     display: inline-block; }
   section.search .users-list .image-container {
