--- a/public/scss/partials/profile.scss
+++ b/public/scss/partials/profile.scss
@@ -12,6 +12,12 @@ section#user-profile.section {
       width: auto;
     }
   }
+  .skills {
+    margin-top: 3em;
+    h2 {
+      margin-bottom: 0.5em;
+    }
+  }
   .skill-list {
     display: inline-block;
     p {
@@ -25,6 +31,25 @@ section#user-profile.section {
         &:after {
           content: "";
         }
+    }
+  }
+  .jobs {
+    margin-top: 3em;
+    .job-list {
+      .job {
+        position: relative;
+        margin-bottom: 1em;
+        padding: 1em;
+        &:after {
+          content: "";
+          position: absolute;
+          width: 50%;
+          left: 25%;
+          bottom: 0;
+          background: $colour_one;
+          height: 2px;
+        }
+      }
     }
   }
 }
