--- a/public/css/main.css
+++ b/public/css/main.css
@@ -259,8 +259,12 @@ section#inbox.section .message-content {
     height: 2px;
     content: "";
     background: #555; }
-section#inbox.section .mail-button.mega-button {
+section#inbox.section .humble-button {
   font-size: 0.75em; }
+section#inbox.section .job-responses {
+  margin-top: 3em; }
+  section#inbox.section .job-responses h3 {
+    margin-bottom: 2em; }
 
 section#send-message h2 {
   margin: 0 0 1.5em 0; }
@@ -307,3 +311,5 @@ footer#colophon {
   padding: 3em 0;
   background: #555;
   border-top: 2px solid #fff; }
+
+/*# sourceMappingURL=main.css.map */
